Update 2. Strategy Design Pattern.md

--- a/2. Strategy Design Pattern.md
+++ b/2. Strategy Design Pattern.md
@@ -1,7 +1,7 @@
 Object-Oriented Design Principle
-+-애플리케이션에서 달라지는 부분을 찾아내고, 달라지지 않는 부분으로부터 분리 시킨다.
-+-구현이 아닌 인터페이스에 맞춰서 프로그래밍한다.→하나하나의 method보다 인터페이스를 활용하라는 말 같음.
-+-상속보다는 구성을 활용한다.→구성(composition = 행동을 인터페이스로 묶고 인터페이스를 원 class에 attributes로 넣는 것.
+-- 애플리케이션에서 달라지는 부분을 찾아내고, 달라지지 않는 부분으로부터 분리 시킨다.
+- 구현이 아닌 인터페이스에 맞춰서 프로그래밍한다.→하나하나의 method보다 인터페이스를 활용하라는 말 같음.
+- 상속보다는 구성을 활용한다.→구성(composition = 행동을 인터페이스로 묶고 인터페이스를 원 class에 attributes로 넣는 것.
 
 #Strategy Pattern
 
