Update 4. Factory Pattern.md

--- a/4. Factory Pattern.md
+++ b/4. Factory Pattern.md
@@ -2,16 +2,26 @@
 - 애플리케이션에서 달라지는 부분을 찾아내고, 달라지지 않는 부분으로부터 분리 시킨다.
 - 구현이 아닌 인터페이스에 맞춰서 프로그래밍한다.→하나하나의 method보다 인터페이스를 활용하라는 말 같음.
 - 상속보다는 구성을 활용한다.→구성(composition = 행동을 인터페이스로 묶고 인터페이스를 원 class에 attributes로 넣는 것.
-- +서로 상호작용을 하는 객체 사이에서는 가능하면 느슨하게 결합하는 디자인을 사용해야한다. (느슨하게?) interface를 연결하라는 말인것 같음.
+- 서로 상호작용을 하는 객체 사이에서는 가능하면 느슨하게 결합하는 디자인을 사용해야한다. (느슨하게?) interface를 연결하라는 말인것 같음.
 - 추상화된 것에 의존하도록 만들어라. 구상 클래스에 의존하도록 만들지 않도록 한다.(interface를 두고 연결하면, 의존성이 뒤집어진다고 함.)
-
-# Factory Method Pattern
+```
+Simple Factor : create 부분을 따로 class로 만들어서 사용.
+Factory Method Pattern : create 부분을 interface로 만들어고 확장성 있는 class로 만들고, 다른 생산자 class안에 넣어 느슨한 연결 만듦.
+       그냥 strategy pattern 처럼 쓰면 같아 지는 듯.
+Factory Pattern : create가 여러개이고, 여러개의 interface를 하나로 묶음(객체 생성을 캡슐화, new가 생기긴한다.). Factory와 client간 결합도를 낮춘다.
+```
+# Factory Method Pattern(아래 Factory Pattern과 따로 기술)
 객체를 생성하기 위한 인터페이스를 정의하는데, 어떤 클래스의 인스턴스를 만들지는 서브클래스에서 결정하게 만듦
 
 새로운 인스턴스를 만들때 객체 안에서 만들면 강한 의존성이 생긴다. 이를 좀 느슨하게 하기 위해서
 factory method pattern(interface)를 이용.(*구상 객체 = new를 사용해서 실제로 만드는 것, run time에 만들어지는게 좋다고 생각됨)
 
-'''
+생산자(creator) class와 제품(product) class가 있다.
+생산자(PizzaStore에 있는 create함수를 interface화해서 NyPizzaStore, ChicagoPizzaStore에서 구현(new) 하도록함.
+-> 직접 new 하지말고, sub class new 담당.
+Product class는 여전히 각각 만들어져야한다.
+
+```
 Pizza orderPizza(str type){
   Pizza *pizza;
   if(type == "cheese")  pizza = new CheesePizza();
@@ -26,12 +36,12 @@ Pizza orderPizza(str type){
   pizza.box();
   return pizza;
 }
-'''
+```
 new keyword를 사용해서 객체 안에서 특정 구현을 사용함 (구상 클래스의 인스턴스를 만듦)
 피자 종류가 추가될 때마다 피자 종류는 변경됨. 1번 OODP에서 달라지는 부분을 찾고, 달라지지 않는 부분(prepare~box)와 분리시킨다.
 
 그래서 SimplePizzaFactory로 생성자를 하나로 묶어서 분리한다.
-'''
+```
 SimplePizzaFactory{
   Pizza createPizza(str type){
     Pizza pizza = null;
@@ -42,15 +52,183 @@ SimplePizzaFactory{
     return pizza;
   }
 }
-'''
+```
 -> 크게 달라진 것이 없어 보이지만 다른 곳에서 생성자를 쓸일이 있다면 simplefactory를 이용해 코드 복붙은 막을 수 있다.
 
+*어쨋든 이와같이 코드가 바뀐다.*
+```
+class PizzaStore{
+  public:
+  
+  void PizzaStore(SimplePizzaFactory factory) this.factory = factory;
+  
+  Pizza orderPizza(str type){
+    Pizza *pizza;
+    pizza = factory.createPizza(type); // 생성을 다른 class에 넘김.
+    pizza.prepare();
+    pizza.bake();
+    pizza.cut();
+    pizza.box();
+    return pizza;
+  }
+  SimplePizzafactory factory;
+}
+```
 
+지점별로 Pizza의 맛을 다르게 설
 
+NYPizzaFactory, ChicagoPizzaFactory, CaliforniaPizzaFactory.. 등 PizzaFactory를 추가해서 만들어 줘서 사용.
+->PizzaStore nyStore = new PizzaStore(NYPizzaFactory nyFactory)과 같은 식으로. <- strategy pattern과 비슷해보임
+```
+abstract class PizzaStore{
+  Pizza orderPizza(type){
+    Pizza = createPizza(type);
+    pizza.prepare();
+    pizza.bake();
+    pizza.cut();
+    pizza.box();
+    return pizza;
+  }
+  abstract Pizza createPizza(str type);
+}
+```
+```
+class NYPizzaStore: public PizzaStore{
+  Pizza createPizza(str type){
+    if(type == "chese") pizza = new NYStyleCheesePizza();
+    elif(type == "greek") pizza = new NYStyleGrrekPizza();
+    elif(type == "pepperoni") pizza = new NYStylePepperoniPizza();
+    ...
+    return pizza;
+  }
+}
 
+class ChicagoPizzaStore: public PizzaStore{
+  Pizza createPizza(str type){
+    if(type == "chese") pizza = new ChicagoStyleCheesePizza();
+    elif(type == "greek") pizza = new ChicagoStyleGrrekPizza();
+    elif(type == "pepperoni") pizza = new ChicagoStylePepperoniPizza();
+    ...
+    return pizza;
+  }
+}   
+```
 
+### *_Factory Method Pattern_*
+abstract Product factoryMethod(str type); 어떤 상품(Product, Pizza)을 만들어서 리턴,
+최상위 객체에서는 interface로 연결되어있어 실제 어떤 Factory가 연결되어 있는지 알 수 없음(encapsulation)
+str type을(매개 변수)를 이용해서 객체 종류 선택 가능
 
+PizzaStore nyPizzaStore = new NYPizzaStore();
+nyPizzaStore.orderPizza("cheese");
+->호출 Pizza pizza = createPizza("cheese");
+-> 그외 공통작업, prepare, bake cut, box 를 실행하고 리턴.
+```
+abstract class Pizza{
+  str name;
+  str dough;
+  str sauce;
+  ArrayList toppings = new ArrayList();
+  
+  void prepare(){//코딩}
+  void bake(){}
+  void cut(){};
+  void box(){};
+  
+  getName(){return name;}
+}
+class NYStyleCheesePizza : public Pizza{
+  NYStyleCheesePizza(){
+    name = "~~~";
+    dout = "~~~';
+    sauce = "~~~";
+    toppoint.add("cheese");
+  }
+}
+class ChicagoStyleCheesePizza : public Pizza{
+  NYStyleCheesePizza(){
+    name = "~~~";
+    dout = "~~~';
+    sauce = "~~~";
+    toppoint.add("cheese");
+  }
+  void cut(){"두껍게");//오버라이딩;
+}
 
+class PizzaTestDrive{
+  PizzaStore nyStore = new NYPizzaStore();
+  PizzaStore chicagoStre = new ChicagoPizzaStore();
+  
+  Pizza pizza = nyStore.orderPizza("cheese");
+  print(pizza.name)
+  
+  Pizza pizza = chicagoStore.orderPizza("cheese");
+  print(pizza.name)
+}
+```
+->client는 피자 가게에서 피자 주문만 할 수 있다.
+
+# Factory Pattern
+여러개의 creation이 있어 factory도 묶어 추상화해야 함.
+families of ingredients 피자의 재료에 대해서 고려하여 class를 만들면
+```
+class interface PizzaIngredientFactory{
+  Dough createDough();
+  Sauce createSauce();
+  Cheese createCheese();
+  Beggied[] createVeggies();
+  Pepperoni createPepperoni();
+  Clams createClam();
+}
+
+class NYPizzaIngredientFactory : public PizzaIngredientFactory{
+  Dough createDout()  return new ThinCrustDough();
+  Sauce createSauce() return new MarinaraSaucs();
+  Cheese createCheese() return new ReggianoCheese();
+  Veggies[] ...
+  Pepperoni ...
+  Clams create Clam() return new Fr3eshClams();
+}
+
+abstract class Pizza {
+  str name;
+  Dough dough;
+  Sauce sauce;
+  Veggies Ve..
+  ...
+  Clams cla;
+  
+  abstract void prepare();
+  void bake(){}
+  void cut(){};
+  void box(){};
+  void setName(name) this.name = name;
+}
+
+class CheesePizza : public Pizza{
+  PizzaIngredientFactory ingredientFactory;
+  CheesePizza(PizzaIngredientFactory ingredientFactory){
+    this.ingredientFactory = ingredientFactory;}
+  void prepare(){
+    dough.ingredientFactory.createDough();
+    sauce.ingredientFactory.createSauce();
+    cheese.ingredientFactory.createCheese();
+  }
+}
+
+class NYPizzaStore : public PizzaStore{
+  Pizza creatPizza(str item){
+    PizzaIngredientFactory ingredientFactory = new NYPizzaIngredientFactory();
+    if(item.equals("cheese")){
+      pizza = new CheesePizza(ingredientFactory);
+      pizza.setNmae("New York Style Cheese Pizza");
+    }
+    elif(item.equals("veggie")){
+      pizza = new VeggiePizza(ingredientFactory);
+      pizza.setNmae("New York Style Cheese Pizza");
+    }
+    return pizza;
+```
 
 
 
