--- a/7. Adapter&Facade Pattern.md
+++ b/7. Adapter&Facade Pattern.md
@@ -4,6 +4,7 @@
 - 상속보다는 구성을 활용한다.→구성(composition = 행동을 인터페이스로 묶고 인터페이스를 원 class에 attributes로 넣는 것.
 - 서로 상호작용을 하는 객체 사이에서는 가능하면 느슨하게 결합하는 디자인을 사용해야한다. (느슨하게?) interface를 연결하라는 말인것 같음.
 - 추상화된 것에 의존하도록 만들어라. 구상 클래스에 의존하도록 만들지 않도록 한다.(interface를 두고 연결하면, 의존성이 뒤집어진다고 함.)
+- 최소 지식 원칙 - 정말 친한 친구하고만 이야기하라. 객체와 상호작용을 하는 클래스의 개수에 주의해야한다
 
 # Adapter Pattern
 클래스의 인터페이스를 클라이언트에서 사용하고자 하는 _*다른 인터페이스로 변환_*하는 패턴.
